# django-job-admin

./: .gitignore  Dockerfile  README.md  docker-compose.standalone.yml  docker-compose.yml  dummy_consumer.py  pyproject.toml  requirements.txt
app/: .env.example  manage.py  worker.py
app/configs/: __init__.py  settings.py
app/job/: admin.py  apps.py  kafka_.py  models.py  signals.py
app/job/management/commands/: job_trigger.py
app/job/migrations/: 0001_initial.py
app/utils/management/commands/: initialsuperuser.py
nginx/: Dockerfile  django.example.conf
